Add pseudo-ouline of the workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,11 +21,11 @@ nextflow.enable.moduleBinaries = true
 params{
     threads = 1
     // file input 
-    split = false // a folder with bam files
-    database = false // the folder with THE bowtie2-database
-    acc2taxid = false
-    names = false
-    nodes = false
+    split     = "" // a folder with bam files
+    database  = "" // a folder with THE bowtie2-database
+    acc2tax   = ""
+    names     = ""
+    nodes     = ""
 }
 
 profiles {
